# Benchmarks

./: .gitignore  README.md  justfile  mise.toml
C/: allocator.c  compile_test.c  concurrency.c  crypto.c  fileio.c  hash.c  json.c  math.c  matrix.c  ml.c  network.c  regex.c  sort.c  string.c
C++/: allocator.cpp  compile_test.cpp  concurrency.cpp  crypto.cpp  fileio.cpp  hash.cpp  json.cpp  math.cpp  matrix.cpp  network.cpp  regex.cpp  sort.cpp  string.cpp
CS/: Program.cs
Java/: CompileTest.java  ConcurrencyBench.java  CryptoBench.java  FileIOBench.java  HashBench.java  JsonBench.java  MathBench.java  MatrixBench.java  NetworkBench.java  RegexBench.java  SortBench.java  StringBench.java
Python/: async_bench.py  benchmarkpy.py  crypto.py  fileio.py  hash.py  json_bench.py  json_multi.py  math_bench.py  matrix.py  ml.py  network.py  regex.py  sort.py  string_ops.py
Rust/: Cargo.toml  allocator.rs  concurrency.rs  crypto.rs  fileio.rs  hash.rs  json.rs  math.rs  matrix.rs  ml.rs  network.rs  regex.rs  sort.rs  string.rs
tools/: Cargo.toml  lib.rs  monitor.rs  runner.rs  store.rs
