[package]
name = "bench-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
hostname = "0.4"
crossterm = "0.27"
regex = "1.10"

[dependencies.ratatui]
version = "0.26"
default-features = false
features = ["crossterm"]

[lib]
name = "bench_tools"
path = "lib.rs"

[[bin]]
name = "monitor"
path = "monitor.rs"

[[bin]]
name = "store"
path = "store.rs"

[[bin]]
name = "runner"
path = "runner.rs"
